<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bebridge.android_template.ChangePasswordFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.bebridge.android_template.viewModel.ChangePasswordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentTop="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/change_password_title"
                android:textAllCaps="true"
                android:textSize="@dimen/text_s"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_l"
                android:padding="@dimen/margin_m"
                android:src="@drawable/icon_chevron_left_light"
                app:tint="?attr/colorControlNormal"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar_layout">

            <ScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:visibility="visible">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_lll"
                        android:src="@drawable/image_logo"
                        app:tint="?attr/colorControlNormal"
                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_lll"
                            android:layout_marginBottom="@dimen/margin_m"
                            android:text="@string/change_password_message"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_s" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_l"
                            android:layout_marginRight="@dimen/margin_l"
                            android:layout_marginBottom="@dimen/margin_s"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_m"
                                app:passwordToggleEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:afterTextChanged="@{viewModel::passwordTextChanged}"
                                    android:hint="@string/change_password_password"
                                    android:inputType="textPassword"
                                    android:text="@={viewModel.password}"
                                    android:textSize="@dimen/text_s"
                                    app:hintTextAppearance="@style/TextLabel" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/change_password_password_guideline"
                                android:textColor="@color/gray"
                                android:textSize="@dimen/text_sss" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_l"
                            android:layout_marginRight="@dimen/margin_l"
                            android:layout_marginBottom="@dimen/margin_s"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_m"
                                app:hintTextAppearance="@style/TextLabel"
                                app:passwordToggleEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:afterTextChanged="@{viewModel::passwordTextChanged}"
                                    android:text="@={viewModel.confirmPassword}"
                                    android:hint="@string/change_password_confirm_password"
                                    android:inputType="textPassword"
                                    android:textSize="@dimen/text_s" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/change_password_password_match_check"
                                android:textColor="@color/error"
                                android:textSize="@dimen/text_sss"
                                android:visibility="@{viewModel.passwordValidationResult == 1 ? View.VISIBLE : View.GONE}"
                                />
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_l"
                        android:layout_marginTop="@dimen/margin_m"
                        android:layout_marginEnd="@dimen/margin_l"
                        android:layout_marginBottom="@dimen/margin_l"
                        android:background="@{(viewModel.passwordValidationResult != 2) || viewModel.loading ? @drawable/button_rounded_rectangle_gray : @drawable/button_rounded_rectangle}"
                        android:enabled="@{(viewModel.passwordValidationResult != 2) || viewModel.loading ? false : true}"
                        android:onClick="@{viewModel::changePasswordButtonClicked}"
                        android:text="@string/change_password_register"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_m" />

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <ProgressBar
            android:layout_width="@dimen/progress_bar"
            android:layout_height="@dimen/progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
            />

    </RelativeLayout>
</layout>
